samples/_failures_safe/1761505405_56e7fa_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c2153645.c: In function ‘main’:
./samples/SAFE/__tmp_c2153645.c:197:5: error: expected identifier or ‘(’ at end of input
  197 |     for (int
      |     ^~~
./samples/SAFE/__tmp_c2153645.c:197:5: error: expected declaration or statement at end of input
